--- a/asymptotic_runtime.ipynb
+++ b/asymptotic_runtime.ipynb
@@ -104,6 +104,37 @@
     "ax.legend()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def n(n, a):\n",
+    "    return a*n\n",
+    "\n",
+    "def n2(n, a):\n",
+    "    return a*n**2\n",
+    "\n",
+    "def n3(n, a):\n",
+    "    return a*n**3\n",
+    "\n",
+    "def n_logn(n, a):\n",
+    "    return a*n*np.log(n)\n",
+    "\n",
+    "def n_logn2(n, a):\n",
+    "    return a*n*np.log(n)**2\n",
+    "\n",
+    "def n_logn3(n, a):\n",
+    "    return a*n*np.log(n)**3\n",
+    "\n",
+    "def n2_logn(n, a):\n",
+    "    return a*n**2*np.log(n)\n",
+    "\n",
+    "def n2_log2(n, a):\n",
+    "    return a*n**2*np.log(n)**2\n"
+   ]
   }
  ],
  "metadata": {
