--- a/binarytree/hs2020_ex5.ipynb
+++ b/binarytree/hs2020_ex5.ipynb
@@ -21,7 +21,7 @@
     "import numpy as np\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "from BinaryTreeLib import BinaryTree, BinaryTreeNode"
+    "from MyBinaryTree import BinaryTree, BinaryTreeNode"
    ]
   },
   {
