--- a/optimiz/table_to_arr.ipynb
+++ b/optimiz/table_to_arr.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import AlgUtils"
+    "import MyAlgUtils"
    ]
   },
   {
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "matrix = AlgUtils.table_to_np(txt, int)\n",
+    "matrix = MyAlgUtils.table_to_np(txt, int)\n",
     "print(matrix)"
    ]
   }
