--- a/optimiz/tabu.ipynb
+++ b/optimiz/tabu.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import AlgUtils\n",
+    "import MyAlgUtils\n",
     "import numpy as np"
    ]
   },
@@ -59,7 +59,7 @@
     "    16 357 298 253 195 145 100 57 21 17 61 98 142 197 249\n",
     "\"\"\"\n",
     "\n",
-    "space = AlgUtils.table_to_np(txt, np.int64)\n",
+    "space = MyAlgUtils.table_to_np(txt, np.int64)\n",
     "print(f\"shape: {space.shape}\")\n",
     "print(space)\n",
     "\n",
