--- a/sort/counting.ipynb
+++ b/sort/counting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,24 +13,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original: [12, 8, 1, 128, 7, 64, 30, 3, 72, 6]\n",
-      "MaxHeap:  [128, 72, 64, 12, 7, 1, 30, 3, 8, 6]\n",
-      "Sorted:   [1, 3, 6, 7, 8, 12, 30, 64, 72, 128]\n"
+      "k=8\n",
+      "---\n",
+      "C idx   [ 0   1   2   3   4   5   6   7   8]\n",
+      "C_count [ 0   0   0   3   3   3   1   1   2]\n",
+      "C_cum   [ 0   0   0   3   6   9  10  11  13]\n",
+      "---\n",
+      "C idx   [ 0   1   2   3   4   5   6   7   8]\n",
+      "C_0     [ 0   0   0   3   6   9  10  11  13] <-- C before first iteration\n",
+      "C_1     [ 0   0   0   3   6   9  10  11  12] <-- C after iteration #1\n",
+      "C_2     [ 0   0   0   3   6   9  10  11  11] <-- C after iteration #2\n",
+      "C_3     [ 0   0   0   2   6   9  10  11  11] <-- C after iteration #3\n",
+      "C_4     [ 0   0   0   2   6   8  10  11  11] <-- C after iteration #4\n",
+      "C_5     [ 0   0   0   2   5   8  10  11  11] <-- C after iteration #5\n",
+      "C_6     [ 0   0   0   2   4   8  10  11  11] <-- C after iteration #6\n",
+      "C_7     [ 0   0   0   2   3   8  10  11  11] <-- C after iteration #7\n",
+      "C_8     [ 0   0   0   2   3   8  10  10  11] <-- C after iteration #8\n",
+      "C_9     [ 0   0   0   1   3   8  10  10  11] <-- C after iteration #9\n",
+      "C_10    [ 0   0   0   0   3   8  10  10  11] <-- C after iteration #10\n",
+      "C_11    [ 0   0   0   0   3   7  10  10  11] <-- C after iteration #11\n",
+      "C_12    [ 0   0   0   0   3   7   9  10  11] <-- C after iteration #12\n",
+      "C_13    [ 0   0   0   0   3   6   9  10  11] <-- C after iteration #13\n",
+      "---\n",
+      "B idx   [ 1   2   3   4   5   6   7   8   9  10  11  12  13]\n",
+      "B_0     [ -   -   -   -   -   -   -   -   -   -   -   -   -] <-- B before first iteration\n",
+      "B_1     [ -   -   -   -   -   -   -   -   -   -   -   -   8] <-- B after iteration #1\n",
+      "B_2     [ -   -   -   -   -   -   -   -   -   -   -   8   8] <-- B after iteration #2\n",
+      "B_3     [ -   -   3   -   -   -   -   -   -   -   -   8   8] <-- B after iteration #3\n",
+      "B_4     [ -   -   3   -   -   -   -   -   5   -   -   8   8] <-- B after iteration #4\n",
+      "B_5     [ -   -   3   -   -   4   -   -   5   -   -   8   8] <-- B after iteration #5\n",
+      "B_6     [ -   -   3   -   4   4   -   -   5   -   -   8   8] <-- B after iteration #6\n",
+      "B_7     [ -   -   3   4   4   4   -   -   5   -   -   8   8] <-- B after iteration #7\n",
+      "B_8     [ -   -   3   4   4   4   -   -   5   -   7   8   8] <-- B after iteration #8\n",
+      "B_9     [ -   3   3   4   4   4   -   -   5   -   7   8   8] <-- B after iteration #9\n",
+      "B_10    [ 3   3   3   4   4   4   -   -   5   -   7   8   8] <-- B after iteration #10\n",
+      "B_11    [ 3   3   3   4   4   4   -   5   5   -   7   8   8] <-- B after iteration #11\n",
+      "B_12    [ 3   3   3   4   4   4   -   5   5   6   7   8   8] <-- B after iteration #12\n",
+      "B_13    [ 3   3   3   4   4   4   5   5   5   6   7   8   8] <-- B after iteration #13\n",
+      "---\n",
+      "idx [ 1   2   3   4   5   6   7   8   9  10  11  12  13]\n",
+      "A   [ 5   6   5   3   3   7   4   4   4   5   3   8   8]\n",
+      "B   [ 3   3   3   4   4   4   5   5   5   6   7   8   8]\n"
      ]
     }
    ],
    "source": [
-    "arr = [5,6,5,3,3,7,4,4,4,5,3,8,8]\n",
+    "A = np.array([5,6,5,3,3,7,4,4,4,5,3,8,8], dtype=int)\n",
     "\n",
+    "assert np.min(A) >= 0\n",
     "\n",
-    "\n"
+    "def arr_to_str(arr, padding=2):\n",
+    "    s = []\n",
+    "    for i in arr:\n",
+    "        if(i == -1):\n",
+    "            z = \"-\".rjust(padding, \" \") \n",
+    "        else:\n",
+    "            z = str(i).rjust(padding, \" \")\n",
+    "        s.append(z)\n",
+    "    return \"[\" + \"  \".join(s) + \"]\"\n",
+    "\n",
+    "def counting_sort(A, k):\n",
+    "    print(f\"k={k}\")\n",
+    "    print(\"---\")\n",
+    "    print(\"C idx\".ljust(7), arr_to_str(np.arange(k+1)))\n",
+    "\n",
+    "    # create empty counting array\n",
+    "    C = np.zeros(k+1, dtype=int)\n",
+    "\n",
+    "    # count of often each value occurs in A\n",
+    "    # C[i] now contains the number of elements equal to i\n",
+    "    for i in range(len(A)):\n",
+    "        C[A[i]] += 1\n",
+    "    print(\"C_count\", arr_to_str(C))\n",
+    "\n",
+    "    # compute cumulative sum \n",
+    "    # C[i] now contains the number of elements less than or equal to i\n",
+    "    for i in range(1, len(C)):\n",
+    "        C[i] = C[i] + C[i-1]\n",
+    "    print(\"C_cum  \", arr_to_str(C))\n",
+    "\n",
+    "    # create sorted array     \n",
+    "    B = np.full_like(A, -1, dtype=int)\n",
+    "    B_str = []\n",
+    "    C_str = []\n",
+    "    B_str.append(\"B_0\".ljust(8,\" \") + arr_to_str(B) + f\" <-- B before first iteration\")\n",
+    "    C_str.append(\"C_0\".ljust(8,\" \") + arr_to_str(C) + f\" <-- C before first iteration\")\n",
+    "    for i in reversed(range(0, len(B))):\n",
+    "        B[C[A[i]]-1] = A[i]\n",
+    "        C[A[i]] -= 1\n",
+    "        B_str.append((\"B_\"+str(len(B)-i)).ljust(8,\" \") + arr_to_str(B) + f\" <-- B after iteration #{len(B)-i}\")\n",
+    "        C_str.append((\"C_\"+str(len(B)-i)).ljust(8,\" \") + arr_to_str(C) + f\" <-- C after iteration #{len(B)-i}\")\n",
+    "    \n",
+    "    print(\"---\")\n",
+    "    print(\"C idx\".ljust(7), arr_to_str(np.arange(k+1)))\n",
+    "    for s in C_str:\n",
+    "        print(s)\n",
+    "\n",
+    "    print(\"---\")\n",
+    "    print(\"B idx\".ljust(7), arr_to_str(np.arange(len(B))+1))\n",
+    "    for s in B_str:\n",
+    "        print(s)\n",
+    "\n",
+    "    return B\n",
+    "\n",
+    "B = counting_sort(A, k=np.amax(A))\n",
+    "\n",
+    "print(\"---\")\n",
+    "print(\"idx\", arr_to_str(np.arange(len(A))+1))\n",
+    "print(\"A  \", arr_to_str(A))\n",
+    "print(\"B  \", arr_to_str(B))"
    ]
   }
  ],
