--- a/tsp_tour/tsp.ipynb
+++ b/tsp_tour/tsp.ipynb
@@ -2,27 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import AlgUtils\n",
+    "import MyAlgUtils\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 3 7 5]\n",
-      " [3 0 2 3]\n",
-      " [5 5 0 7]\n",
-      " [4 2 4 0]]\n"
+     "ename": "NameError",
+     "evalue": "name 'AlgUtils' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 8\u001b[0m\n\u001b[0;32m      1\u001b[0m txt \u001b[39m=\u001b[39m \u001b[39m\"\"\"\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[39m0 3 7 5\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[39m3 0 2 3\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[39m5 5 0 7\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[39m4 2 4 0\u001b[39m\n\u001b[0;32m      6\u001b[0m \u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m----> 8\u001b[0m mat \u001b[39m=\u001b[39m AlgUtils\u001b[39m.\u001b[39mtable_to_np(txt, np\u001b[39m.\u001b[39mint64)\n\u001b[0;32m      9\u001b[0m \u001b[39mprint\u001b[39m(mat)\n\u001b[0;32m     11\u001b[0m python_idx \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marange(\u001b[39m0\u001b[39m, mat\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'AlgUtils' is not defined"
      ]
     }
    ],
@@ -34,7 +35,7 @@
     "4 2 4 0\n",
     "\"\"\"\n",
     "\n",
-    "mat = AlgUtils.table_to_np(txt, np.int64)\n",
+    "mat = MyAlgUtils.table_to_np(txt, np.int64)\n",
     "print(mat)\n",
     "\n",
     "python_idx = np.arange(0, mat.shape[0])\n",
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
