--- a/complexity_fit.ipynb
+++ b/complexity_fit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,14 @@
     "    # return 0\n",
     "\n",
     "    if(n >= 1):\n",
-    "        return 5*y(n/3.0) + np.log(n)\n",
-    "    return 0\n",
+    "        return 5.0*y(n/3.0) + np.log(n)\n",
+    "    return 0.0\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "n = np.arange(1, 100000, 1)\n",
+    "n = np.arange(1.0, 100000.0, 1, dtype=float)\n",
     "x = np.array([y(ni) for ni in n])\n",
     "\n",
     "plt.rcParams['figure.figsize'] = [6, 3]\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -125,8 +125,7 @@
     "    opt, cov = curve_fit(Y, n, x)\n",
     "    c = opt[0]\n",
     "\n",
-    "    x_fit = np.array([Y(ni, *opt) for ni in n])\n",
-    "    y_asymptote = c*x*x\n",
+    "    x_fit = np.array([Y(ni, c) for ni in n])\n",
     "\n",
     "    ax = axs[i]\n",
     "    ax.plot(n, x, lw=1, label=\"y(n)\", color=\"red\")\n",
